--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-statoPostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-statoPostazioni.tex
@@ -2,8 +2,8 @@
 
 \begin{figure}[H]
   \centering
-    \includegraphics[scale=0.5]{src/CasiDUso/immagini/UC-statoPostazioni.png}
-  \caption{UC- Stato prenotazioni}
+    \includegraphics[width=\textwidth]{src/CasiDUso/immagini/UC-statoPostazioni.png}
+  \caption{Stato prenotazioni}
 \end{figure}
 
 Il presente diagramma vuole riassumere la possibilità di prenotazione delle prenotazioni da parte di un utilizzatore dell’applicazione.
