--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-visualizzazioneProfilo.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-visualizzazioneProfilo.tex
@@ -1,4 +1,11 @@
 \subsection{UC-11 Visualizzazione del profilo personale da applicazione mobile}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{src/CasiDUso/immagini/ProfiloPersonale.png}
+	\caption{UC-11,13.}
+\end{figure}
+
 \begin{itemize}
 	\item \textbf{Attore primario:} utente autenticato;
 
@@ -17,6 +24,12 @@
 	   	\end{enumerate}
 \end{itemize}
 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{src/CasiDUso/immagini/SottocasiVisualizzazioneProfilo.png}
+	\caption{Zoom-in visualizzazione profilo personale.}
+\end{figure}
 
 \subsubsection{UC-11.1 Visualizzazione del nome dell'utente da applicazione mobile}
 \begin{itemize}
@@ -50,6 +63,13 @@
 
 
 \subsection{UC-12 Visualizzazione del profilo di un altro utente da applicazione web}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{src/CasiDUso/immagini/AttivitaAdmin.png}
+	\caption{UC-12,15.}
+\end{figure}
+
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore autenticato;
 
@@ -68,6 +88,12 @@
     	\end{itemize}
 	\end{enumerate}
 \end{itemize}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{src/CasiDUso/immagini/SottocasiVisualizzazioneAdmin.png}
+	\caption{Zoom-in visualizzazione profilo di un altro utente.}
+\end{figure}
 
 \subsubsection{UC-12.1 Visualizzazione del nome di un altro utente da applicazione web}
 \begin{itemize}
