--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-creazionePrenotazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-creazionePrenotazione.tex
@@ -2,8 +2,8 @@
 
 \begin{figure}[H]
   \centering
-    \includegraphics[scale=0.5]{src/CasiDUso/immagini/UC-creazionePrenotazione.png}
-  \caption{UC- Creazione di una prenotazione}
+    \includegraphics[width=\textwidth]{src/CasiDUso/immagini/UC-creazionePrenotazione.png}
+  \caption{Creazione di una prenotazione}
 \end{figure}
 
 Il presente diagramma vuole riassumere la possibilità di gestione delle prenotazioni da parte di un utente autenticato nell’applicazione.
