--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-igienizzazionePostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-igienizzazionePostazioni.tex
@@ -2,8 +2,8 @@
 
 \begin{figure}[H]
   \centering
-    \includegraphics[scale=0.5]{src/CasiDUso/immagini/UC-igienizzazionePostazioni.png}
-  \caption{UC- Igienizzazione postazioni}
+    \includegraphics[width=\textwidth]{src/CasiDUso/immagini/UC-igienizzazionePostazioni.png}
+  \caption{Igienizzazione postazioni}
 \end{figure}
 
 Il presente diagramma vuole riassumere la possibilità di igienizzazione delle postazioni da parte di un utente igienizzatore all'interno dell’applicazione.
