--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-modCancProfilo.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-modCancProfilo.tex
@@ -1,4 +1,11 @@
 \subsection{UC-13 Modifica del profilo personale} 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{src/CasiDUso/immagini/SottocasiModificaProfilo.png}
+	\caption{UC-13,14}
+\end{figure}
+
 \begin{itemize}
 
 	\item \textbf{Attore primario:} utente autenticato;
