--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Attori/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Attori/main.tex
@@ -1,7 +1,13 @@
 \subsection{Attori primari}
 \begin{itemize}
     \item \textbf{amministratore non autenticato:} utente dell'applicazione web, persona munita di un account da amministratore, che deve ancora eseguire l'accesso;
-    \item \textbf{amministratore di sistema:} utente dell'applicazione web, amministratore che ha pu\`{o} gestire gli utenti, le postazioni e le stanze;
-    \item \textbf{dipendente non autenticato:} utente dell'applicazione mobile, che deve ancora eseguire l'accesso;
-    \item \textbf{dipendente autenticato:} utente dell'applicazione mobile che ha eseguito l'accesso.
+    \item \textbf{amministratore autenticato:} utente dell'applicazione web, amministratore che pu\`{o} gestire gli utenti, le postazioni e le stanze;
+    \item \textbf{utente non autenticato:} utente dell'applicazione mobile, che deve ancora eseguire l'accesso;
+    \item \textbf{utente autenticato:} utente dell'applicazione mobile che ha eseguito l'accesso;
+    \item \textbf{utente non registrato:} utente che non possiede un account nel sistema;
+    \item \textbf{utente registrato:} utente che possiede un account nel sistema;
+    \item \textbf{utente:} utente che interagisce con l'applicazione;
+    \item \textbf{impiegato:} utente non amministratore;
+    \item \textbf{igienizzatore:} utente addetto esclusivamente all'igienizzazione delle postazioni/stanze;
+    \item \textbf{dipendente:} utente del personale dell'azienda.
 \end{itemize}
