--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-gestioneAutenticazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-gestioneAutenticazione.tex
@@ -224,7 +224,7 @@
 	\item \textbf{Scenario principale:}
 	      \begin{enumerate}
 		      \item il sistema elabora la richiesta ricevuta;
-		      \item il sistema restituisce un messaggio d'errore esplicativo che viene visualizzato sullo schermo del dispositivo dell'utente e non completa la registrazione del nuovo dipendente fino a quando non viene inserita una password corretta.
+		      \item il sistema restituisce un messaggio d'errore esplicativo che viene visualizzato sullo schermo del dispositivo dell'utente e non completa la registrazione del nuovo utente fino a quando non viene inserita una password corretta.
 	      \end{enumerate}
 \end{itemize}
 \subsection{UC-6 Visualizzazione di un messaggio d'errore causato dall'inserimento di una password non corrispondente a quella inserita precedentemente}
