--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneCasiDUso.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneCasiDUso.tex
@@ -20,12 +20,10 @@ I casi d'uso devono essere opportunamente corredati da:
     \item \textbf{Titolo}: un titolo descrittivo;
     \item \textbf{Descrizione}: una breve descrizione;
     \item \textbf{Attori primari}: indicazione degli attori principali coinvolti;
-    \item \textbf{Attori secondari}: indicazione degli attori secondari coinvolti;
-    \item \textbf{Scopo}: scopo del caso d'uso;
+    \item \textbf{Attori secondari}: indicazione degli attori secondari coinvolti \emph{(se presente)};
     \item \textbf{Precondizioni}: condizioni che devono essere verificate affinch\'{e} gli eventi descritti si verifichino;
     \item \textbf{Postcondizioni}: condizioni che devono essere verificarsi alla conclusione degli eventi descritti; 
-    \item \textbf{Flusso principale}: flusso principale degli eventi, in forma di elenco numerato, con eventuale riferimento ad ulteriori casi d'uso;
-    \item \textbf{Scenario alternativo}: indicazione di uno scenario alternativo \emph{(se presente)};
+    \item \textbf{Scenario principale}: flusso principale degli eventi, in forma di elenco numerato, con eventuale riferimento ad ulteriori casi d'uso;
     \item \textbf{Estensioni}: indicazione delle estensioni \emph{(se presenti)};
     \item \textbf{Inclusioni}: indicazione delle inclusioni \emph{(se presenti)}.
 \end{itemize}
