aggiunto verificatore e poche modifiche nel documento

--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -2,7 +2,7 @@
 
 \newcommand{\Approvatore}{TODO}
 \newcommand{\Redattori}{Elvis Murtezan \newline Giovanni Grigoletto}
-\newcommand{\Verificatori}{TODO}
+\newcommand{\Verificatori}{Abdelwahad Kandoul \newline Edoardo Caregnato}
 \newcommand{\Responsabile}{}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
