--- a/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
@@ -19,10 +19,10 @@
         TODO & 
         \responsabile{} \\
 
-        X.X.X  & 
-        XXXX-XX-XX & 
+        0.0.2  & 
+        2021-01-08 & 
         Verifica & 
-        TODO & 
+        Abdelwahad kandoul, Edoardo Caregnato & 
         \verificatore{} \\
         
         0.0.1  & 
