--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio6.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio6.tex
@@ -1,4 +1,4 @@
-A questo punto si presuppone di avere un prodotto sufficientemente funzionante ma ancora fondamentalmente incompleto. Questo stadio corrisponde ad una prima parte della \glo{fase} di \glo{validazione} ed il raggiungimento dei suoi obiettivi corrisponde alla terza \glo{milestone} principale del progetto. Lo scopo di fondo è ultimare l'implementazione e concentrarsi principalmente sugli aspetti qualitativi del prodotto, in modo da consegnare infine un \glo{deliverable} conforme a quanto richiesto dal terzo incontro di revisione programmato.
+A questo punto si presuppone di avere un prodotto sufficientemente funzionante ma ancora fondamentalmente incompleto. Questo stadio corrisponde ad una prima parte della \glo{fase} di \glo{validazione} ed il raggiungimento dei suoi obiettivi corrisponde alla terza \glo{milestone} principale del progetto ovvero la Revisione di Qualifica. Lo scopo di fondo è ultimare l'implementazione e concentrarsi principalmente sugli aspetti qualitativi del prodotto, in modo da consegnare infine un \glo{deliverable} conforme a quanto richiesto dal terzo incontro di revisione programmato.
         
         \subsubsection{Periodo di svolgimento}
         20 marzo 2021 - 2 aprile 2021;
