--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
@@ -8,19 +8,19 @@ Qui sotto viene esposto sinteticamente lo schema generale, dove ogni stadio è c
         \item Stadio 2 - Soddisfacimento requisiti d'ingresso.
     \end{itemize}
 
-    \item \textbf{Fase di Progettazione}:
+    \item \textbf{Fase di Progettazione Architetturale}:
     \begin{itemize}
         \item Stadio 3 - Strutturazione delle componenti;
         \item Stadio 4 - Concretizzazione e sviluppo del \glo{Proof of Concept};
     \end{itemize}
 
-    \item \textbf{Fase di Codifica}:
+    \item \textbf{Fase di Dettaglio e Codifica}:
     \begin{itemize}  
-        \item Stadio 5 - Sviluppo e rifinitura.
-        \item Stadio 6 - Qualifica e testing;
+        \item Stadio 5 - Sviluppo e rifinitura;
+        \item Stadio 6 - Qualifica e testing.
     \end{itemize}
 
-    \item \textbf{Fase di Collaudo}:
+    \item \textbf{Fase di Validazione e Collaudo}:
     \begin{itemize}        
         \item Stadio 7 - Finalizzazione.
     \end{itemize}
