--- a/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
@@ -1,14 +1,14 @@
 \newcommand{\Titolo}{Piano di Qualifica}
 
 \newcommand{\Approvatore}{TODO}
-\newcommand{\Redattori}{Andrea De Tomasi \newline TODO}
-\newcommand{\Verificatori}{TODO}
+\newcommand{\Redattori}{Andrea De Tomasi \newline Abdelwahad Kandoul}
+\newcommand{\Verificatori}{Alessio Trevisan \newline Filippo Pinton}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
 \newcommand{\Versionedoc}{X.X.X}
 
-\newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline TODO \newline Sweleven}
+\newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Imola Informatica S.p.A \newline Sweleven}
 
 \newcommand{\Uso}{Esterno}
 
