--- a/DocumentiEsterni/PianoDiQualifica/src/Introduzione/src/Scopo_prodotto.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Introduzione/src/Scopo_prodotto.tex
@@ -1,5 +1,5 @@
 Lo scopo del prodotto è quello di realizzare un’applicazione in grado di segnalare
- ad un server dedicato la presenza di un utente su una determinata postazione appartenente ad una stanza, 
- controllare in ogni momento se la postazione è occupata, prenotata oppure da pulire. 
+ ad un server dedicato la presenza di un utente su una determinata postazione e 
+ controllare in ogni momento se questa è libera, disabilitata, occupata, prenotata oppure da pulire. 
  L’applicazione dovrà essere installata in uno smartphone (Android oppure Ios) e dovrà poter essere 
- utilizzata impiegando dei tag RFID\glo .
+ utilizzata impiegando dei tag RFID\glo{}.
