--- a/DocumentiEsterni/PianoDiQualifica/src/QualitaDiProdotto/src/src/Funzionalita/src/Metriche.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/QualitaDiProdotto/src/src/Funzionalita/src/Metriche.tex
@@ -1,5 +1,5 @@
-\paragraph{Totalià dell'implementazione}
-			La totalità del prodotto e il rispetto dei requisiti viene indicato da una percentuale.
+\paragraph{Totalità dell'implementazione}
+			Il grado di completezza del prodotto e il rispetto dei requisiti vengono indicati da una percentuale.
 			\begin{itemize}
 			\item misurazione: si calcola con la seguente formula: \\
 			\centerline { T = (1 - \(\frac{N\textsubscript{FNI}}{N\textsubscript{FI}} \))$ \cdot  100$ } \\
