--- a/DocumentiEsterni/PianoDiQualifica/src/QualitaDiProdotto/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/QualitaDiProdotto/main.tex
@@ -1,4 +1,4 @@
-Per valutare la qualità del prodotto il gruppo ha deciso di far riferimento allo standard ISO/IEC 9126\glo 
+Per valutare la qualità del prodotto il gruppo ha deciso di far riferimento allo standard ISO/IEC 9126\glo{}
 che definisce le proprietà di cui tener conto per generare un prodotto di buona qualità. 
 Le proprietà sono descritte attraverso dei parametri, che ne quantificano il grado di raggiungimento. 
 Di seguito vengono citate le voci che il gruppo ha ritenuto rilevanti nell’ambito del progetto.
