--- a/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Comandi.tex
@@ -3,8 +3,8 @@
 \newcommand{\Prodotto}{TODO}
 
 \newcommand{\Approvatore}{TODO}
-\newcommand{\Redattori}{TODO \newline TODO \newline TODO}
-\newcommand{\Verificatori}{TODO \newline TODO}
+\newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Filippo Pinton}
+\newcommand{\Verificatori}{Elvis \newline TODO}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
