--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiPerfezionamento.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiPerfezionamento.tex
@@ -25,11 +25,11 @@ In particolare, nel progetto corrente verrà assegnato un grado di rischio a cia
 
 La codifica di rischio delle epic prevede 5 tipologie di rischio ed è sviluppata come segue:
 \begin{itemize}
-    \item AAA: rischio elevato (tutti e tre i valori sono critici)
-    \item AAM: rischio medio-alto (al massimo due dei tre criteri presentano valori critici)
-    \item AMM: rischio medio (al massimo un criterio presenta valori critici)
-    \item MMM: rischio medio-basso (non sono previsti valori critici)
-    \item BMM: rischio basso (non sono presenti valori critici e almeno uno dei tre parametri di valutazione del rischio presenta il valore favorevole
+    \item Highest: tutti e tre i valori sono critici;
+    \item High: al massimo due dei tre criteri presentano valori critici;
+    \item Medium: al massimo un criterio presenta valori critici;
+    \item Low: non sono previsti valori critici;
+    \item Lowest: non sono presenti valori critici e almeno uno dei tre parametri di valutazione del rischio presenta il valore favorevole.
 \end{itemize}
 
 Si consiglia di pianificare le attività di progetto in modo tale da mantenere un valore medio di rischio per ogni task. La codifica di rischio nelle epic va aggiornata in accordo con i criteri precedentemente presentati. Qualora venisse raggiunto un grado di rischio superiore al medio si prospetta un'analisi più accurata della situazione con annessi eventuali modifiche al piano relativo a tale task.
